fixed bug with image logo distortion

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ nav li {
 	display: inline;
 }
 
-nav img {
+nav li img {
 	width: 14px;
 	height: 14px;
 	position: relative;
